Increment API to v2
